# openvino_demo

./: README.md
cpp/: CMakeLists.txt  openvino_detection.cpp  openvino_detection.h
cpp/common/utils/include/samples/: classification_results.h  ocv_common.hpp
cpp/model/: model_DAD_3_7.xml
cpp_main/: CMakeLists.txt  main.cpp
cpp_main/cpp/: CMakeLists.txt  openvino_detection.cpp  openvino_detection.h
cpp_main/cpp/common/utils/include/samples/: classification_results.h
cpp_main/model/: model_DAD_3_7.mapping
device_list/: CMakeLists.txt  main.cpp
python/: classification.py  opencv_simple.py
python/model/: model_DAD_3_7.xml
